@@ -108,8 +108,8 @@
 		      <child>
 			<widget class="GtkLabel" id="label86">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Category</property>
-			  <property name="use_underline">False</property>
+			  <property name="label" translatable="yes">Categor_y</property>
+			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
 			  <property name="wrap">False</property>
@@ -118,6 +118,7 @@
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
+			  <property name="mnemonic_widget">functions_treeview_category</property>
 			</widget>
 			<packing>
 			  <property name="type">label_item</property>
@@ -163,8 +164,8 @@
 		      <child>
 			<widget class="GtkLabel" id="label85">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Function</property>
-			  <property name="use_underline">False</property>
+			  <property name="label" translatable="yes">_Function</property>
+			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
 			  <property name="wrap">False</property>
@@ -173,6 +174,7 @@
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
+			  <property name="mnemonic_widget">functions_treeview_function</property>
 			</widget>
 			<packing>
 			  <property name="type">label_item</property>
@@ -233,8 +235,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label87">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Description</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">Descri_ption</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -243,6 +245,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">functions_textview_description</property>
 		    </widget>
 		    <packing>
 		      <property name="type">label_item</property>
@@ -496,7 +499,7 @@
 			      <child>
 				<widget class="GtkLabel" id="functions_buttonlabel_deactivate">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Deactivate</property>
+				  <property name="label" translatable="yes">Deacti_vate</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -523,7 +526,7 @@
 		  <child>
 		    <widget class="GtkButton" id="functions_button_apply">
 		      <property name="visible">True</property>
-		      <property name="tooltip" translatable="yes">Apply to selected function to the current result</property>
+		      <property name="tooltip" translatable="yes">Apply the selected function to the current result</property>
 		      <property name="can_default">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
@@ -568,7 +571,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label89">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Apply</property>
+				  <property name="label" translatable="yes">_Apply</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
