@@ -73,7 +73,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label61">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Recalculate</property>
+			  <property name="label" translatable="yes">_Recalculate</property>
 			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
