@@ -96,8 +96,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label84">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Category</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">Categor_y</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -106,6 +106,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">variables_treeview_category</property>
 		    </widget>
 		    <packing>
 		      <property name="type">label_item</property>
@@ -151,8 +152,8 @@
 		  <child>
 		    <widget class="GtkLabel" id="label83">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Variable</property>
-		      <property name="use_underline">False</property>
+		      <property name="label" translatable="yes">_Variable</property>
+		      <property name="use_underline">True</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap">False</property>
@@ -161,6 +162,7 @@
 		      <property name="yalign">0.5</property>
 		      <property name="xpad">0</property>
 		      <property name="ypad">0</property>
+		      <property name="mnemonic_widget">variables_treeview_variable</property>
 		    </widget>
 		    <packing>
 		      <property name="type">label_item</property>
@@ -397,7 +399,7 @@
 			      <child>
 				<widget class="GtkLabel" id="variables_buttonlabel_deactivate">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Deactivate</property>
+				  <property name="label" translatable="yes">Deacti_vate</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -464,7 +466,7 @@
 			      <child>
 				<widget class="GtkLabel" id="label90">
 				  <property name="visible">True</property>
-				  <property name="label" translatable="yes">Export</property>
+				  <property name="label" translatable="yes">E_xport</property>
 				  <property name="use_underline">True</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
