@@ -1,3 +1,14 @@
+2006-07-15 Niklas Knutsson  <nq@altern.org>
+
+	* Add --with-libgnome and --with-libgnomeui configure options
+	* Add accelerator keys to widgets in units, functions, and variables dialogs
+
+2006-07-14 Niklas Knutsson  <nq@altern.org>
+
+	* Add accelerators to all dialog buttons and expanders
+	* Fix set unknowns in RPN mode
+	* Fix compile without libgnomeui
+
 2006-07-03 Niklas Knutsson  <nq@altern.org>
 
 	* Make separate options for "Sort Minus Last" and "Negative Exponents" in numerical display menu
